Update mobile compatibility

--- a/styles/index.scss
+++ b/styles/index.scss
@@ -28,7 +28,7 @@ main {
 
 header {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: 1fr 10ch 1fr;
   align-items: center;
   justify-content: space-between;
   padding: 1rem;
@@ -73,6 +73,7 @@ header {
 
 section {
   padding-block: 2rem;
+  padding-inline: 1rem;
 
   > * + * {
     margin-top: 1em;
