--- a/styles/index.css
+++ b/styles/index.css
@@ -24,7 +24,7 @@ main {
 
 header {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: 1fr 10ch 1fr;
   align-items: center;
   justify-content: space-between;
   padding: 1rem;
@@ -63,6 +63,7 @@ header nav ul li a:hover {
 
 section {
   padding-block: 2rem;
+  padding-inline: 1rem;
 }
 section > * + * {
   margin-top: 1em;
