--- a/styles/index.scss
+++ b/styles/index.scss
@@ -199,7 +199,7 @@ footer {
   }
 }
 
-.cards {
+.news-cards {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
@@ -243,5 +243,93 @@ footer {
 
   img {
     width: 100%;
+  }
+}
+
+$card-offset: 8rem;
+
+.card-list {
+  display: flex;
+  flex-flow: row nowrap;
+  margin-inline: auto;
+  width: max-content;
+
+  .card {
+    display: grid;
+    grid-template-rows: repeat(3, 1fr);
+    min-width: 320px;
+    width: 320px;
+    height: 200px;
+    padding: 0.5rem;
+    margin: 0;
+    background-color: #f3f1ed;
+    box-shadow: 0 0 16px #0005;
+    font-size: 0.8em;
+    transition: transform 0.1s ease-in-out;
+    transform-origin: bottom left;
+
+    &:where(:hover, :active) {
+      transform: translateY(-5px) rotate(-2deg);
+
+      & ~ * {
+        transform: translateX($card-offset);
+      }
+    }
+
+    &:not(:first-of-type) {
+      margin-left: calc(-1 * $card-offset + 0.5rem);
+    }
+
+    .phone {
+      grid-area: 1 / 1;
+      text-align: left;
+    }
+
+    .company {
+      grid-area: 1 / 1;
+      text-align: right;
+      span {
+        font-size: 0.68em;
+      }
+    }
+
+    .center {
+      grid-area: 2 / 1;
+      align-self: center;
+      text-align: center;
+
+      .name {
+        font-size: 1.4em;
+      }
+    }
+
+    .bottom {
+      grid-area: 3 / 1;
+      align-self: end;
+      text-align: center;
+      span {
+        font-size: 0.8em;
+      }
+    }
+
+    strong {
+      font-weight: 400;
+    }
+
+    &:nth-child(1) {
+      font-family: "Fira Sans", sans-serif;
+    }
+    &:nth-child(2) {
+      font-family: "Kanit", sans-serif;
+    }
+    &:nth-child(3) {
+      font-family: "Nunito", sans-serif;
+    }
+    &:nth-child(4) {
+      font-family: "Poppins", sans-serif;
+    }
+    &:nth-child(5) {
+      font-family: "Raleway", sans-serif;
+    }
   }
 }
