--- a/styles/index.css
+++ b/styles/index.css
@@ -105,6 +105,7 @@ footer {
   grid-area: 1/-1;
 }
 .hero .hero-text {
+  padding-inline: 1rem;
   color: white;
   text-align: center;
   text-shadow: 0 0 10px black;
@@ -138,6 +139,8 @@ footer {
 .image-cut-in article .cut-in-text {
   padding: 1rem;
   text-align: center;
+  max-width: 60ch;
+  justify-self: center;
 }
 .image-cut-in article .cut-in-image {
   position: relative;
