--- a/styles/index.scss
+++ b/styles/index.scss
@@ -131,6 +131,7 @@ footer {
   }
 
   .hero-text {
+    padding-inline: 1rem;
     color: white;
     text-align: center;
     text-shadow: 0 0 10px #000f;
@@ -165,6 +166,8 @@ footer {
     .cut-in-text {
       padding: 1rem;
       text-align: center;
+      max-width: 60ch;
+      justify-self: center;
     }
     .cut-in-image {
       position: relative;
