--- a/styles/index.scss
+++ b/styles/index.scss
@@ -28,6 +28,8 @@ ul li {
 main {
   background-color: var(--color-main-light);
   min-height: 100vh;
+  overflow-x: hidden;
+  padding-bottom: 1rem;
 }
 
 header {
@@ -64,10 +66,16 @@ header {
         a {
           color: var(--color-accent-light);
           text-decoration: none;
+          background-image: linear-gradient(white 0 0);
+          background-repeat: no-repeat;
+          background-size: var(--hover-grow, 0%) 0.07em;
+          background-position: calc(100% - var(--hover-grow, 0%)) 100%;
+          transition: background 0.2s, background-position 0s;
 
           &:hover {
-            transition: color 0.2s;
+            transition: background 0.2s, background-position 0s, color 0.2s;
             color: white;
+            --hover-grow: 100%;
           }
         }
       }
@@ -227,53 +235,66 @@ hr {
 }
 
 .news-cards {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  gap: 1rem;
+  background: linear-gradient(#091f2c, #1c393f);
+  background: url(../assets/space.jpg);
+  background-attachment: fixed;
+  background-position: center;
 
-  article {
-    position: relative;
+  > h1 {
+    color: white;
+    text-shadow: 0 0 8px black;
+  }
+
+  .news-cards-inner {
     display: flex;
-    flex-flow: column nowrap;
-    background-color: var(--color-accent-light);
-    width: 40ch;
-    height: 40ch;
-    box-shadow: 4px 4px 4px rgba($color: #000000, $alpha: 0.1);
-    cursor: pointer;
-    transition: background-color 0.3s;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 1rem;
 
-    .article-image {
-      height: 80%;
-      overflow: hidden;
+    article {
+      position: relative;
+      display: flex;
+      flex-flow: column nowrap;
+      background-color: var(--color-accent-light);
+      width: 40ch;
+      height: 40ch;
+      box-shadow: 4px 4px 4px rgba($color: #000000, $alpha: 0.1);
+      cursor: pointer;
+      transition: background-color 0.3s;
 
-      img {
-        height: 100%;
-        object-fit: cover;
+      .article-image {
+        height: 80%;
+        overflow: hidden;
+
+        img {
+          height: 100%;
+          object-fit: cover;
+        }
       }
-    }
 
-    .article-text {
-      margin-block: auto;
-      padding-inline: 1rem;
-    }
+      .article-text {
+        color: black;
+        margin-block: auto;
+        padding-inline: 1rem;
+      }
 
-    &:where(:hover, :active, .mobile-tapped) {
-      background-color: var(--color-accent-shade);
-      transform: translate(10px 10px);
-      --bar-slide: calc(10ch + 10px);
-    }
+      &:where(:hover, :active, .mobile-tapped) {
+        background-color: var(--color-accent-shade);
+        transform: translate(10px 10px);
+        --bar-slide: calc(10ch + 10px);
+      }
 
-    &::after {
-      content: "";
-      position: absolute;
-      bottom: 25%;
-      left: -10px;
-      width: var(--bar-slide, 0);
-      height: 1.5rem;
-      background-color: var(--color-accent-shade);
-      box-shadow: 4px 4px 4px #0005;
-      transition: width 0.2s;
+      &::after {
+        content: "";
+        position: absolute;
+        bottom: 25%;
+        left: -10px;
+        width: var(--bar-slide, 0);
+        height: 1.5rem;
+        background-color: var(--color-accent-shade);
+        box-shadow: 4px 4px 4px #0005;
+        transition: width 0.2s;
+      }
     }
   }
 }
@@ -283,6 +304,11 @@ hr {
 
   img {
     width: 100%;
+  }
+
+  &.banana {
+    max-width: min(50%, 20rem);
+    margin-inline: auto;
   }
 }
 
